# rs-audio-stream

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  configuration.yaml  docker-compose.yml  fly.toml  init.sh  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230808032244_seed_user.sql  20230811032545_create_issue_delivery_queue_table.sql
scripts/: init-db.sh  init-redis.sh
site/: index.html
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
