[package]
name = "audio_streamer"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "audio_streamer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
bytes = "1.1"
futures = "0.3"
serde = "1.0.164"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
warp-range = "2.0.0"

[dev-dependencies]
reqwest = "0.11"
